<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sattar.fciblog.SignUpActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/image" />


    <EditText
        android:id="@+id/signup_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginEnd="@dimen/outer"
        android:layout_marginLeft="@dimen/outer"
        android:layout_marginRight="@dimen/outer"
        android:layout_marginStart="@dimen/outer"
        android:layout_marginTop="@dimen/outer"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        android:paddingLeft="4dp" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_userName"
        android:layout_marginEnd="@dimen/outer"
        android:layout_marginLeft="@dimen/outer"
        android:layout_marginRight="@dimen/outer"
        android:layout_marginStart="@dimen/outer"
        android:layout_marginTop="@dimen/outer"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="4dp" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_email"
        android:layout_marginEnd="@dimen/outer"
        android:layout_marginLeft="@dimen/outer"
        android:layout_marginRight="@dimen/outer"
        android:layout_marginStart="@dimen/outer"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="4dp" />

    <com.dd.CircularProgressButton
        android:id="@+id/signup_signUpBT"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/signup_password"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/inner"
        android:layout_marginLeft="@dimen/inner"
        android:layout_marginRight="@dimen/inner"
        android:layout_marginStart="@dimen/inner"
        android:layout_marginTop="@dimen/outer"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:cpb_selectorIdle="@drawable/idle_state_selector"
        app:cpb_cornerRadius="@dimen/inner"
        app:cpb_iconComplete="@drawable/ic_action_accept"
        app:cpb_iconError="@android:drawable/ic_delete"
        app:cpb_textIdle="@string/sign_up" />

    <TextView
        android:id="@+id/signup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_signUpBT"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal"
        android:text="@string/have_account"
        android:textSize="@dimen/normal" />
</RelativeLayout>
