<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <ImageView
                android:layout_margin="8dp"
                android:id="@+id/card_view_profile_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/pic_19" />

            <LinearLayout
                android:id="@+id/lin_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_toRightOf="@+id/card_view_profile_image"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:id="@+id/card_view_user_name"
                    android:text="@string/user_name"
                    android:textColor="#302e2e"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:id="@+id/card_view_time_posted"
                    android:text="@string/time_posted" />

                <LinearLayout
                    android:id="@+id/sep"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/sep_color"
                    android:orientation="vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:id="@+id/card_view_post_content"
                    android:text="@string/dummy_post" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/card_view_like_image_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/lin_post"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/like_unactive" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lin_post"
                android:id="@+id/card_view_num_likes"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="2dp"
                android:layout_toLeftOf="@+id/card_view_like_image_button"
                android:text="@string/num_likes" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>